<resources>
    <string name="app_name" translatable="false">Oxfinder</string>
    <string name="ui_compund_rct">Compound/Reaction:</string>
    <string name="ui_find_ox_states">Find oxidation states</string>
    <string name="ui_calc_molar_mass">Calculate molar mass</string>
    <string name="ui_balance">Balance</string>
    <string name="ui_detailed_output">Detailed Output</string>
    <string name="ui_result">Result:</string>
    <string name="ui_ok" translatable="false">OK</string>
    <string name="ui_error">Error</string>
    <string name="ui_incorrect_charge_format">Incorrectly formatted charge</string>
    <string name="ui_insufficient_closing_braces">Insufficient number of closing braces</string>
    <string name="ui_exception">An exception has been encountered</string>
    <string name="ui_unexpected_character">Unexpected character encountered</string>
    <string name="ui_unknown_element">Unknown element</string>
    <string name="ui_g_per_mol" translatable="false">g/mol</string>
    <string name="ui_unknown_molar_mass">Molar mass of element %1$s is unknown.</string>
</resources>
